# cloudtab

./: .env.example  .gitignore  Caddyfile  docker-compose.preview.yml  docker-compose.prod.yml  docker-compose.yml
.claude/: launch.json  settings.local.json
backend/: .dockerignore  Dockerfile.dev  Dockerfile.prod  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py
backend/app/api/v1/: auth.py  backups.py  domains.py  git_repos.py  instances.py  router.py  servers.py  tasks.py  users.py
backend/app/core/: config.py  database_sync.py  dependencies.py  encryption.py  exceptions.py  logging.py  security.py
backend/app/models/: __init__.py  backup_record.py  backup_schedule.py  base.py  domain.py  git_repo.py  odoo_instance.py  server.py  task_log.py  user.py
backend/app/schemas/: auth.py  backup.py  domain.py  git_repo.py  odoo_instance.py  server.py  task.py  user.py
backend/app/services/: auth_service.py  backup_service.py  domain_service.py  git_service.py  odoo_service.py  s3_service.py  server_service.py  ssh_service.py
backend/app/tests/: conftest.py  test_api_auth.py  test_api_instances.py  test_api_servers.py  test_encryption.py  test_health.py  test_s3_service.py  test_security.py  test_services.py
backend/app/workers/: backup_tasks.py  celery_app.py  domain_tasks.py  git_tasks.py  odoo_tasks.py  server_tasks.py  utils.py
frontend/: Dockerfile  Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx
(+31 files in other folders)
